cgx-core/src/snapshots/cgx_core__sbom__tests__snapshots__snapshot_stale_serde.snap
---
source: cgx-core/src/sbom.rs
expression: normalized
---
{
  "bomFormat": "CycloneDX",
  "components": [
    {
      "bom-ref": "pkg:cargo/serde@[VERSION]",
      "description": "A generic serialization/deserialization framework",
      "name": "serde",
      "purl": "pkg:cargo/serde@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    }
  ],
  "dependencies": [
    {
      "ref": "pkg:cargo/serde@[VERSION]"
    },
    {
      "dependsOn": [
        "pkg:cargo/serde@[VERSION]"
      ],
      "ref": "pkg:cargo/stale-serde@[VERSION]"
    }
  ],
  "metadata": {
    "component": {
      "bom-ref": "pkg:cargo/stale-serde@[VERSION]",
      "name": "stale-serde",
      "purl": "pkg:cargo/stale-serde@[VERSION]",
      "type": "application",
      "version": "[VERSION]"
    },
    "tools": [
      {
        "name": "cgx",
        "vendor": "cgx project",
        "version": "[VERSION]"
      }
    ]
  },
  "specVersion": "1.4",
  "version": 1
}
