cgx-core/src/snapshots/cgx_core__sbom__tests__snapshots__snapshot_timestamp_all_features.snap
---
source: cgx-core/src/sbom.rs
expression: normalized
---
{
  "bomFormat": "CycloneDX",
  "components": [
    {
      "bom-ref": "pkg:cargo/autocfg@[VERSION]",
      "description": "Automatic cfg for Rust compiler features",
      "name": "autocfg",
      "properties": [
        {
          "name": "cdx:rustc:dependency_kind",
          "value": "build"
        }
      ],
      "purl": "pkg:cargo/autocfg@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    },
    {
      "bom-ref": "pkg:cargo/chrono@[VERSION]",
      "description": "Date and time library for Rust",
      "name": "chrono",
      "purl": "pkg:cargo/chrono@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    },
    {
      "bom-ref": "pkg:cargo/iana-time-zone@[VERSION]",
      "description": "get the IANA time zone for the current system",
      "name": "iana-time-zone",
      "purl": "pkg:cargo/iana-time-zone@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    },
    {
      "bom-ref": "pkg:cargo/num-traits@[VERSION]",
      "description": "Numeric traits for generic mathematics",
      "name": "num-traits",
      "purl": "pkg:cargo/num-traits@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    },
    {
      "bom-ref": "pkg:cargo/serde@[VERSION]",
      "description": "A generic serialization/deserialization framework",
      "name": "serde",
      "purl": "pkg:cargo/serde@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    },
    {
      "bom-ref": "pkg:cargo/serde_core@[VERSION]",
      "description": "Serde traits only, with no support for derive -- use the `serde` crate instead",
      "name": "serde_core",
      "purl": "pkg:cargo/serde_core@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    }
  ],
  "dependencies": [
    {
      "ref": "pkg:cargo/autocfg@[VERSION]"
    },
    {
      "dependsOn": [
        "pkg:cargo/iana-time-zone@[VERSION]",
        "pkg:cargo/num-traits@[VERSION]"
      ],
      "ref": "pkg:cargo/chrono@[VERSION]"
    },
    {
      "ref": "pkg:cargo/iana-time-zone@[VERSION]"
    },
    {
      "dependsOn": [
        "pkg:cargo/autocfg@[VERSION]"
      ],
      "ref": "pkg:cargo/num-traits@[VERSION]"
    },
    {
      "dependsOn": [
        "pkg:cargo/serde_core@[VERSION]"
      ],
      "ref": "pkg:cargo/serde@[VERSION]"
    },
    {
      "ref": "pkg:cargo/serde_core@[VERSION]"
    },
    {
      "dependsOn": [
        "pkg:cargo/chrono@[VERSION]",
        "pkg:cargo/serde@[VERSION]"
      ],
      "ref": "pkg:cargo/timestamp@[VERSION]"
    }
  ],
  "metadata": {
    "component": {
      "bom-ref": "pkg:cargo/timestamp@[VERSION]",
      "name": "timestamp",
      "properties": [
        {
          "name": "build:all-features",
          "value": "true"
        }
      ],
      "purl": "pkg:cargo/timestamp@[VERSION]",
      "type": "application",
      "version": "[VERSION]"
    },
    "tools": [
      {
        "name": "cgx",
        "vendor": "cgx project",
        "version": "[VERSION]"
      }
    ]
  },
  "specVersion": "1.4",
  "version": 1
}
