cgx-core/src/snapshots/cgx_core__sbom__tests__snapshots__snapshot_timestamp_default_features.snap
---
source: cgx-core/src/sbom.rs
expression: normalized
---
{
  "bomFormat": "CycloneDX",
  "components": [
    {
      "bom-ref": "pkg:cargo/serde@[VERSION]",
      "description": "A generic serialization/deserialization framework",
      "name": "serde",
      "purl": "pkg:cargo/serde@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    },
    {
      "bom-ref": "pkg:cargo/serde_core@[VERSION]",
      "description": "Serde traits only, with no support for derive -- use the `serde` crate instead",
      "name": "serde_core",
      "purl": "pkg:cargo/serde_core@[VERSION]",
      "type": "library",
      "version": "[VERSION]"
    }
  ],
  "dependencies": [
    {
      "dependsOn": [
        "pkg:cargo/serde_core@[VERSION]"
      ],
      "ref": "pkg:cargo/serde@[VERSION]"
    },
    {
      "ref": "pkg:cargo/serde_core@[VERSION]"
    },
    {
      "dependsOn": [
        "pkg:cargo/serde@[VERSION]"
      ],
      "ref": "pkg:cargo/timestamp@[VERSION]"
    }
  ],
  "metadata": {
    "component": {
      "bom-ref": "pkg:cargo/timestamp@[VERSION]",
      "name": "timestamp",
      "purl": "pkg:cargo/timestamp@[VERSION]",
      "type": "application",
      "version": "[VERSION]"
    },
    "tools": [
      {
        "name": "cgx",
        "vendor": "cgx project",
        "version": "[VERSION]"
      }
    ]
  },
  "specVersion": "1.4",
  "version": 1
}
